src/test/Success/test_loop2.c
int main(){
    int a, i;
    for(i = 0; i < 10; i = i + 1){
        a = a * 2;
    }
}