src/test/Fail/test_redec4.c
int a = 0;

int a(){

}

int main(){
    a();
}